Rev. 3.2.1: Verzeichniskorrekturen und globale Veränderungen der abbreviations.

--- a/Anhang.tex
+++ b/Anhang.tex
@@ -1,7 +1,7 @@
 \chapter{Technische Daten des Flowsensors}
 \includepdf[pages=3]{Anhang/FS6122H.pdf}
 
-\chapter{Technische Daten des \gls{VCO2}/\gls{VO2}-Sensor-Moduls}
+\chapter{Technische Daten des \acrshort{CO2}/\acrshort{O2}-Sensor-Moduls}
 \includepdf[pages=3-7]{Anhang/AION.pdf}
 
 \chapter{Programmcode des MATLAB-Programms}
