--- a/Diskussion.tex
+++ b/Diskussion.tex
@@ -55,7 +55,7 @@ Für \gls{VE}/\gls{VCO2} wurden ähnliche Voraussetzungen gestellt, wie für den
 %
 Die Kategorisierung wurde aus zeitlichen Gründen mit der ersten Version der grafischen Auswertung der Rohdaten vorgenommen. In Folge der Analyse der erstellten Grafiken wurde ein Fehler im MATLAB-Skript bei der Berechnung der \gls{AF} anhand des gemessenen Flows festgestellt. Nach einem erneuten Durchlauf des MATLAB-Programms konnte das Problem mit den meisten undifferenzierbaren Graphen behoben werden. Es sollten dementsprechend zukünftig neue Testmessungen bzw. eine erneute Auswertung der neuen Plots durchgeführt werden, da die Erkenntnisse dadurch abweichen können. Dies lies allerdings der zeitliche Rahmen der Arbeit nicht zu.
 %
-\subsection{\gls{EQCO2} als optimale Methode}
+\subsection{\acrshort{EQCO2} als optimale Methode}
 %
 75~\% der mit der ersten Algorithmus-Version generierten \gls{EQCO2}-Grafiken wurden jedoch bereits als gut kategorisiert. Diese Methode brachte im Vergleich zwischen den Ratern sowie diesen und der Software die geringste Durchschnittsabweichung der VT2 mit \SI{-3,02}{\per\minute} $\pm$\SI{6}{\per\minute} hervor (siehe. Abb. \ref{pic:pic26}). Die anderen Streudiagramme für die übrigen Methoden in Abb. \ref{pic:pic23}, \ref{pic:pic24} und \ref{pic:pic27} besitzen dieselbe Skalierung, sodass in Abb. \ref{pic:pic26} deutlich die geringsten Differenzen erkennbar sind. Als zusätzliches Vergleichsinstrument wurde aus den Ergebnissen von Ratern und Software der Korrelationskoeffizient $r$ für jede Methode bestimmt. Je dichter $r$ am Wert eins liegt, desto höher ist die Korrelation und desto eindeutiger ist die Methode. Mit $0,912$ ist der Korrelationskoeffizient für das \gls{EQCO2} sehr nah am Wert eins und im Vergleich mit den anderen Methoden am besten.
 %
@@ -63,7 +63,7 @@ Die Kategorisierung wurde aus zeitlichen Gründen mit der ersten Version der gra
 	\centering
 	%\includegraphics[scale=0.7]{Bilder/r_eqco2}
 	\includegraphics[scale=0.95]{Bilder/korr_eqco2.eps}
-	\caption[Korrelation der \gls{EQCO2}-Werte von Ratern und Software]{Korrelation der mit dem \gls{EQCO2} bestimmten VT2 von Ratern und Software in Form einer Regressionsgeraden; aufgetragen wird die gemittelte VT2 der Rater gegenüber der VT2 der Software in \si{\per\minute}}
+	\caption[Korrelation der \acrshort{EQCO2}-Werte von Ratern und Software]{Korrelation der mit dem \acrshort{EQCO2} bestimmten VT2 von Ratern und Software in Form einer Regressionsgeraden; aufgetragen wird die gemittelte VT2 der Rater gegenüber der VT2 der Software in \si{\per\minute}}
 	\label{pic:pic28}
 \end{figure}
 %
@@ -73,7 +73,7 @@ Die Differenz der Schwellenergebnisse entspricht in etwa auch der zwischen den d
 %
 \begin{table}[H]
 	\begin{center}
-		\caption{cardioscans angepasstes Trainingszonenmodell nach Wilfried Kindermann, angewandt auf Proband 11m mit zwei unterschiedlichen VT2-Ergebnissen der Rater 1 und 2}
+		\caption[Trainingszonenmodell nach W. Kindermann angewandt auf Proband 11m]{cardioscans angepasstes Trainingszonenmodell nach Wilfried Kindermann, angewandt auf Proband 11m mit zwei unterschiedlichen VT2-Ergebnissen der Rater 1 und 2}
 		\medskip
 		\begin{tabulary}{\textwidth}{L L L L}
 			\toprule
@@ -95,7 +95,7 @@ Tab. \ref{tab:tabelle9} zeigt, dass die Herzfrequenzen der Trainingszonen entspr
 Für Probandin 6w entstand eine ähnliche Differenz der Ergebnisse, obwohl dort ein eindeutiger Anstieg des \gls{EQCO2} zu sehen ist (siehe Abb. \ref{pic:pic17}). Rater~1 detektierte die VT2 eine Stufe früher, wo bereits ein \gls{EQCO2}-Anstieg in der orangen Kurve zu sehen ist. Dieser war für Rater~2 scheinbar noch nicht signifikant. Die Software bestimmte die VT2 später, da der Wert mit den Referenzdaten der HUNT 3 Studie mehr übereinstimmte. Vergleicht man die VT2 von Rater~1 bei \SI{130}{\per\minute} mit der \gls{HFmax} der Probandin bei \SI{178}{\per\minute}, entspricht die Schwelle 73~\%~\gls{HFmax}. Laut der HUNT 3 Studie liegt die durchschnittliche VT2 für gesunde Frauen zwischen 40 und 49 Jahren bei 90~\%~\gls{HFmax}$\pm$6. Dementsprechend ist die VT2 von Rater~1 zu früh bestimmt worden.\\
 Für Proband 11m (26 Jahre) entspricht die VT2 nach Rater~1 83,7~\%~\gls{HFmax} und nach Rater~2 89,9~\%~\gls{HFmax} (vgl. Tab. \ref{tab:tabelle4}). Verglichen mit der durchschnittlichen VT2 für gesunde Männer zwischen 20 und 29 Jahren mit 87,8~\%~\gls{HFmax}$\pm$5,4 lägen wiederum beide Ergebnisse trotz Differenz innerhalb des Durchschnitts. Die eigene Aussage des Probanden über den Trainingszustand lies Rater~1 hier zur niedrigen VT2 tendieren. Wahrscheinlich ist auch hier, dass die VT2 nach Rater~2 und Software näher am Realitätszustand der Person liegt.
 %
-\subsection{\gls{VE}/\gls{VCO2} als geeignete Referenzmethode}
+\subsection{\acrshort{VE}/\acrshort{VCO2} als geeignete Referenzmethode}
 %
 Die Abweichungen zwischen Ratern und Software beträgt für diese Methode im Mittel \SI{-4,07}{\per\minute} $\pm$\SI{11}{\per\minute}. Verglichen mit der \gls{EQCO2}-Methode weisen die Ergebnisse größere Unterschiede auf und die Schwellenbestimmungen geschahen weniger eindeutig. Der Korrelationskoeffizient $r$ nimmt den Wert $0,816$ an. 15 von 28 Kurven für diese Methode waren gut. Ein Beispiel bietet Abb. \ref{pic:pic20} von Proband 20m, wo die Zunahme der \gls{VCO2} deutlich zu sehen ist. Rater und Software kamen bei dieser Grafik zu sehr ähnlichen Ergebnissen.\\
 Einige Kurven waren jedoch kritisch, da nicht differenzierbar. Bei dieser Methode wirkten diese Artefakte sich allerdings nicht so stark auf die Schwellenbestimmung aus, da sie, wie z.B. in Abb. \ref{pic:pic21} zu erkennen, ausschließlich in der ersten Messhälfte auftraten. Im Bereich der VT2 waren die Verläufe der Graphen meistens gut auszuwerten.\\
@@ -144,7 +144,7 @@ In den Feldern 5 und 6 der in Kapitel 3 abgebildeten 6-Felder-Grafiken wurden di
 %
 \begin{table}[H]
 	\centering
-	\caption{Vergleich der innerhalb der Testmessungen erhobenen \myglsgen{VO2max} mit Daten der HUNT 3 Studie, abhängig von Geschlecht und Alter}
+	\caption[Vergleich der \acrshort{VO2max}-Daten mit HUNT 3 Studie]{Vergleich der innerhalb der Testmessungen erhobenen \acrshort{VO2max} mit Daten der HUNT 3 Studie, abhängig von Geschlecht und Alter}
 	\medskip
 	\begin{tabulary}{\textwidth}{L C C C}
 		\toprule
