--- a/Einfuehrung.tex
+++ b/Einfuehrung.tex
@@ -22,7 +22,7 @@ RQ = \frac{\dot{V}(CO_2)}{\dot{V}(O_2)}
 \label{eq:formel1}
 \end{equation}
 %
-Das Verhältnis von \gls{VCO2} zu \gls{VO2}, der \myglsgen{RQ}, muss normalerweise getrennt für die innere und äußere Atmung betrachtet werden. Bei gesunden Menschen bzw. bei idealer Zirkulation ohne Einschränkungen auf der Strecke des Gastransfers herrscht jedoch ein Gleichgewicht ("`Steady State"')~\cite{Kroidl.2015} und das 3-Zahnräder-Modell nach Wasserman (siehe Abb. \ref{pic:pic1}) funktioniert einwandfrei. Da kardiopulmonale Defizite in der Sportmedizin ein Ausschlusskriterium für eine Spiroergometrie darstellen, wird in dieser Arbeit generell von einem Steady State ausgegangen. Der RQ wird bei der Ruhestoffwechselanalyse gemessen und deutet an, aus welchen Makronährstoffen der Körper momentan Energie bezieht. Werden ausschließlich Fette metabolisiert, liegt er idealerweise bei ca. 0,7. Dies ist in absoluter körperlicher Ruhe der Fall. Liefern Kohlenhydrate die gesamte Energie, nimmt er Werte $\geq$1 an~\cite{Kroidl.2015}. Eine steigende Kohlenhydratverbrennung wird durch zunehmende Aktivität initiiert. Darauf fußt auch der aktuelle Software-Algorithmus von cardioscan. Die damit verbundene Problematik wird in Kapitel 1.3 erläutert.
+Das Verhältnis von \acrfull{VCO2} zu \acrfull{VO2}, der \myglsgen{RQ}, muss normalerweise getrennt für die innere und äußere Atmung betrachtet werden. Bei gesunden Menschen bzw. bei idealer Zirkulation ohne Einschränkungen auf der Strecke des Gastransfers herrscht jedoch ein Gleichgewicht ("`Steady State"')~\cite{Kroidl.2015} und das 3-Zahnräder-Modell nach Wasserman (siehe Abb. \ref{pic:pic1}) funktioniert einwandfrei. Da kardiopulmonale Defizite in der Sportmedizin ein Ausschlusskriterium für eine Spiroergometrie darstellen, wird in dieser Arbeit generell von einem Steady State ausgegangen. Der RQ wird bei der Ruhestoffwechselanalyse gemessen und deutet an, aus welchen Makronährstoffen der Körper momentan Energie bezieht. Werden ausschließlich Fette metabolisiert, liegt er idealerweise bei ca. 0,7. Dies ist in absoluter körperlicher Ruhe der Fall. Liefern Kohlenhydrate die gesamte Energie, nimmt er Werte $\geq$1 an~\cite{Kroidl.2015}. Eine steigende Kohlenhydratverbrennung wird durch zunehmende Aktivität initiiert. Darauf fußt auch der aktuelle Software-Algorithmus von cardioscan. Die damit verbundene Problematik wird in Kapitel 1.3 erläutert.
 %
 \subsection{Energiebereitstellung des Körpers}
 %
@@ -99,7 +99,7 @@ Tab.~\ref{tab:tabelle1} listet die physiologischen Prozesse auf, die als Indikat
 \label{eq:formel7}
 \end{flalign}
 %
-Zu Beginn einer Belastung sind Laktatproduktion und -elimination während der aeroben Glykolyse im Gleichgewicht und werden außerdem nicht gesteigert. Letzteres ändert sich jedoch bei steigender Belastung und ab Erreichen der maximalen aeroben Glykolyse mit dem ersten Anstieg der Laktatkonzentration~\cite{Antonutto.1995}. Die ventilatorische Antwort auf die Laktatzunahme ist nun das sogenannte Exzess-\gls{CO2}~\cite{Westhoff.2012}. Dieses wird zusätzlich zum normal metabolisierten \gls{CO2} exspiriert und sorgt für den überproportionalen Anstieg der \gls{VCO2} gegenüber der \gls{VO2}, welcher ab der VT1 mess- und visualisierbar wird. Daraus resultiert auch eine messbare Ventilationszunahme zum Abatmen des Exzess-\gls{CO2}~\cite{Kroidl.2015} (siehe Tab. \ref{tab:tabelle1}). Wenn die Elimination aus kapazitiven Gründen endet, der kontinuierliche Laktat-Anstieg jedoch anhält, ist das von Heck et al. geprägte \gls{MLSS} erreicht und es kommt zum Ende des aerob-anaeroben Übergangs~\cite{Heck.1985}. Sobald das \gls{MLSS} überschritten wird, setzt etwas zeitversetzt die metabolische Azidose und die weitere überproportionale \gls{VCO2}-Steigerung infolge einer Hyperventilation bei der VT2 ein~\cite{Kroidl.2015}. Diese Gegebenheiten gelten allerdings nur im Falle einer störungsfreien Wechselwirkung zwischen \gls{CO2}-Gehalt im Blut und ventilatorischer Reaktion, die beispielsweise bei einer \myglsgen{COPD} nicht mehr funktioniert. Die ventilatorischen Schwellen werden in der Regel mit der entsprechenden Leistung in \si{\watt} oder Herzfrequenz in \si{\per\minute} angegeben.
+Zu Beginn einer Belastung sind Laktatproduktion und -elimination während der aeroben Glykolyse im Gleichgewicht und werden außerdem nicht gesteigert. Letzteres ändert sich jedoch bei steigender Belastung und ab Erreichen der maximalen aeroben Glykolyse mit dem ersten Anstieg der Laktatkonzentration~\cite{Antonutto.1995}. Die ventilatorische Antwort auf die Laktatzunahme ist nun das sogenannte Exzess-\gls{CO2}~\cite{Westhoff.2012}. Dieses wird zusätzlich zum normal metabolisierten \gls{CO2} exspiriert und sorgt für den überproportionalen Anstieg der \gls{VCO2} gegenüber der \gls{VO2}, welcher ab der VT1 mess- und visualisierbar wird. Daraus resultiert auch eine messbare Ventilationszunahme zum Abatmen des Exzess-\gls{CO2}~\cite{Kroidl.2015} (siehe Tab. \ref{tab:tabelle1}). Wenn die Elimination aus kapazitiven Gründen endet, der kontinuierliche Laktat-Anstieg jedoch anhält, ist das von Heck et al. geprägte \gls{MLSS} erreicht und es kommt zum Ende des aerob-anaeroben Übergangs~\cite{Heck.1985}. Sobald das \gls{MLSS} überschritten wird, setzt etwas zeitversetzt die metabolische Azidose und die weitere überproportionale \gls{VCO2}-Steigerung infolge einer Hyperventilation bei der VT2 ein~\cite{Kroidl.2015}. Diese Gegebenheiten gelten allerdings nur im Falle einer störungsfreien Wechselwirkung zwischen \gls{CO2}-Gehalt im Blut und ventilatorischer Reaktion, die beispielsweise bei einer \myglsgen{COPD} nicht mehr funktioniert. Die ventilatorischen Schwellen werden in der Regel mit der entsprechenden \gls{W} in \si{\watt} oder \gls{HF} in \si{\per\minute} angegeben.
 %\clearpage
 %
 \subsection{Methoden zur Schwellenbestimmung}
@@ -112,7 +112,7 @@ Das wichtigste grafische Instrument der Spiroergometrie ist die 9-Felder-Grafik 
 	\centering
 	\includegraphics[width=\textwidth]{Bilder/9fieldcomplex.png}
 	\caption[Beispielhafte 9-Felder-Grafik nach einer Spiroergometrie]{Beispiel einer 9-Felder-Grafik nach einer Spiroergometrie mit einer jungen sportlichen Frau.\\
-	Für die sportmedizinische Spiroergometrie relevante Felder: Feld 4: \gls{VE} in \si{\litre\per\minute} gegenüber \gls{VCO2} in \si{\milli\litre\per\minute}, Feld 5: \gls{HF} in \si{\per\minute} und \gls{VCO2} in \si{\milli\litre\per\minute} gegenüber \gls{VO2} in \si{\milli\litre\per\minute}, Feld 6: \gls{EQO2} und \gls{EQCO2} gegenüber der Zeit in \si{\minute}; VT1 wird mit einer vertikalen blauen Linie bzw. einer Raute und einem schwarzen Pfeil markiert. VT2 wird mit einer roten vertikalen Linie angedeutet.~\cite{Kroidl.2015}}
+	Für die sportmedizinische Spiroergometrie relevante Felder: Feld 4: \gls{VE} in \si{\litre\per\minute} gegenüber \gls{VCO2} in \si{\milli\litre\per\minute}, Feld 5: \gls{HF} in \si{\per\minute} und \gls{VCO2} in \si{\milli\litre\per\minute} gegenüber \gls{VO2} in \si{\milli\litre\per\minute}, Feld 6: \acrshort{EQO2} und \acrshort{EQCO2} gegenüber der Zeit in \si{\minute}; die VT1 wird mit einer vertikalen blauen Linie bzw. einer Raute und einem schwarzen Pfeil markiert. die VT2 wird mit einer roten vertikalen Linie angedeutet.~\cite{Kroidl.2015}}
 	\label{pic:pic2}
 \end{figure}
 %
@@ -154,7 +154,7 @@ Anhand eines Pfeils und einer vertikalen blauen Linie mit einer kleinen Raute wu
 	\begin{subfigure}[t]{0.45\textwidth}
 		\centering
 		\includegraphics[width=50mm]{Bilder/eqo2.png}
-		\subcaption[Schematische Darstellung des \gls{EQO2}]{Schematische Darstellung des \gls{EQO2}; Das Verhältnis aus der \gls{VE} und der \gls{VO2} wird gegenüber der Zeit oder der Leistung \gls{WL} geplottet}
+		\subcaption[Schematische Darstellung des \acrshort{EQO2}]{Schematische Darstellung des \gls{EQO2}; Das Verhältnis aus der \gls{VE} und der \gls{VO2} wird gegenüber der Zeit oder der Leistung \gls{WL} geplottet}
 		\label{subpic:pic6}
 	\end{subfigure}
 	\caption[Methoden zur grafischen Bestimmung der VT1]{Methoden zur grafischen Bestimmung der VT1; Die VT1 wird durch die erste vertikale Linie und den blauen Punkt markiert. Die zweite vertikale Linie deutet VT2 an~\cite{Kroidl.2015}}
@@ -179,14 +179,14 @@ Wie in Abb.~\ref{pic:pic5} durch die rechte gestrichelte Linie zu sehen, ist die
 	\begin{subfigure}[t]{0.45\textwidth}
 		\centering
 		\includegraphics[width=50mm]{Bilder/eqco2.png}
-		\subcaption[Schematische Darstellung des \gls{EQCO2}]{Schematische Darstellung des \gls{EQCO2}; Das Verhältnis aus der \gls{VE} und der \gls{VCO2} wird gegenüber der Zeit oder Leistung \gls{WL} geplottet}
+		\subcaption[Schematische Darstellung des \acrshort{EQCO2}]{Schematische Darstellung des \acrshort{EQCO2}; Das Verhältnis aus der \acrshort{VE} und der \acrshort{VCO2} wird gegenüber der Zeit oder Leistung \gls{WL} geplottet}
 		\label{subpic:pic7}
 	\end{subfigure}%
 	\hfil
 	\begin{subfigure}[t]{0.45\textwidth}
 		\centering
 		\includegraphics[width=50mm]{Bilder/field4.png}
-		\subcaption[Schematische Darstellung der \gls{VE} relativ zur \gls{VCO2}]{Schematische Darstellung des grafischen Vergleichs der \gls{VE} relativ zur \gls{VCO2}; Analogie zum V-Slope}
+		\subcaption[Schematische Darstellung der \acrshort{VE} relativ zur \acrshort{VCO2}]{Schematische Darstellung des grafischen Vergleichs der \gls{VE} relativ zur \gls{VCO2}; Analogie zum V-Slope}
 		\label{subpic:pic8}
 	\end{subfigure}
 	\caption[Methoden zur grafischen Bestimmung der VT2]{Methoden zur grafischen Bestimmung der VT2; Die VT2 wird durch die zweite vertikale Linie und den orangen Punkt markiert. Die erste vertikale Linie deutet die VT1 an~\cite{Kroidl.2015}}
