--- a/Resultate.tex
+++ b/Resultate.tex
@@ -121,7 +121,7 @@ Die vierte Beispielgrafik in Abb. \ref{pic:pic21} zeigt die Ergebnisse des Proba
 %
 \begin{table}[H]
 	\begin{center}
-		\caption{Ergebnisse für die \gls{HF} in \si{\per\minute} bei der VT1}
+		\caption{Ergebnisse für die \acrshort{HF} in \si{\per\minute} bei der VT1}
 		\medskip
 		\begin{tabulary}{\textwidth}{L@{\hspace{3em}} C C C C C C}
 			\toprule
@@ -179,7 +179,7 @@ Abb. \ref{pic:pic22} zeigt die Netzdiagramme für die VT1. Abb. \ref{subpic:pic1
 	\begin{subfigure}[c]{0.45\textwidth}
 		\centering
 		\includegraphics[scale=0.4]{Bilder/eqo2_net.eps}
-			\subcaption[Vergleich der VT1-Bestimmungen durch das \gls{EQO2}]{Vergleich der VT1-Bestimmungen durch das \gls{EQO2} zwischen Ratern und Software; Intervall: \SIrange{0}{180}{\per\minute}}
+			\subcaption[Vergleich der VT1-Bestimmungen durch das \acrshort{EQO2}]{Vergleich der VT1-Bestimmungen durch das \gls{EQO2} zwischen Ratern und Software; Intervall: \SIrange{0}{180}{\per\minute}}
 			\label{subpic:pic2}
 	\end{subfigure}
 \caption[Grafische Darstellung der Übereinstimmung für die VT1]{Darstellung der Übereinstimmung zwischen Ratern und Software bei Bestimmung der VT1; Grau: Rater 1; Rot: Rater 2; Grün: Software; Kontrastierungen stellen Übereinstimmungen dar}
@@ -198,7 +198,7 @@ Abb. \ref{pic:pic22} zeigt die Netzdiagramme für die VT1. Abb. \ref{subpic:pic1
 	\centering
 	%\includegraphics[scale=0.7]{Bilder/mean_eqo2}
 	\includegraphics[scale=0.95]{Bilder/eqo2.eps}
-	\caption[Differenzen der \gls{EQO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch das \gls{EQO2}; Mean = Mittelwert der Streuung, SD~=~Standardabweichung}
+	\caption[Differenzen der \acrshort{EQO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch das \acrshort{EQO2}; Mean = Mittelwert der Streuung, SD~=~Standardabweichung}
 	\label{pic:pic24}
 \end{figure}
 %
@@ -209,7 +209,7 @@ Abb. \ref{pic:pic24} zeigt das Diagramm für die \gls{EQO2}-Methode mit den Diff
 %
 \begin{table}[H]
 	\begin{center}
-		\caption{Ergebnisse für die \gls{HF} in \si{\per\minute} bei VT2}
+		\caption{Ergebnisse für die \acrshort{HF} in \si{\per\minute} bei der VT2}
 		\medskip
 		\begin{tabulary}{\textwidth}{L@{\hspace{3em}} C C C C C C C}
 			\toprule
@@ -259,14 +259,14 @@ In Tab. \ref{tab:tabelle6} sind die Werte für die \gls{HF} eingetragen, an dene
 	\begin{subfigure}[c]{0.45\textwidth}
 		\centering
 		\includegraphics[scale=0.4]{Bilder/eqco2_net.eps}
-		\subcaption[Vergleich der VT2-Bestimmungen durch das \gls{EQCO2}]{Vergleich der VT2-Bestimmungen durch das \gls{EQCO2} zwischen Ratern und Software; Intervall: \SIrange{0}{250}{\per\minute}}
+		\subcaption[Vergleich der VT2-Bestimmungen durch das \acrshort{EQCO2}]{Vergleich der VT2-Bestimmungen durch das \acrshort{EQCO2} zwischen Ratern und Software; Intervall: \SIrange{0}{250}{\per\minute}}
 		\label{subpic:pic3}
 	\end{subfigure}%
 	\hfil
 	\begin{subfigure}[c]{0.45\textwidth}
 		\centering
 		\includegraphics[scale=0.4]{Bilder/vevco2_net.eps}
-		\subcaption[Vergleich der VT2-Bestimmungen durch \gls{VE}/\gls{VCO2}]{Vergleich der VT2-Bestimmungen durch \gls{VE}/\gls{VCO2} zwischen Ratern und Software; Intervall: \SIrange{0}{250}{\per\minute}}
+		\subcaption[Vergleich der VT2-Bestimmungen durch \acrshort{VE}/\acrshort{VCO2}]{Vergleich der VT2-Bestimmungen durch \acrshort{VE}/\acrshort{VCO2} zwischen Ratern und Software; Intervall: \SIrange{0}{250}{\per\minute}}
 		\label{subpic:pic4}
 	\end{subfigure}
 	\caption[Grafische Darstellung der Übereinstimmung für die VT2]{Darstellung der Übereinstimmung zwischen Ratern und Software bei Bestimmung der VT2; Grau: Rater 1; Rot: Rater 2; Grün: Software; Kontrastierungen stellen Übereinstimmungen dar}
@@ -279,7 +279,7 @@ Abb. \ref{pic:pic25} zeigt die Netzdiagramme für die VT2-Ergebnisse durch das \
 	\centering
 	%\includegraphics[scale=0.7]{Bilder/mean_eqco2}
 	\includegraphics[scale=0.95]{Bilder/eqco2.eps}
-	\caption[Differenzen der \gls{EQCO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch das \gls{EQCO2}; Mean = Mittelwert der Streuung, SD~=~Standardabweichung}
+	\caption[Differenzen der \acrshort{EQCO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch das \acrshort{EQCO2}; Mean = Mittelwert der Streuung, SD~=~Standardabweichung}
 	\label{pic:pic26}
 \end{figure}
 %
@@ -289,7 +289,7 @@ In Abb. \ref{pic:pic26} ist die Streuung der \gls{EQCO2}-Methode dargestellt. Di
 	\centering
 	%\includegraphics[scale=0.7]{Bilder/mean_vevco2}
 	\includegraphics[scale=0.95]{Bilder/vevco2.eps}
-	\caption[Differenzen der \gls{VE}/\gls{VCO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch \gls{VE}/\gls{VCO2}; Mean = Mittelwert der Streuung, SD~=~Standardabweichung}
+	\caption[Differenzen der \acrshort{VE}/\acrshort{VCO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch \acrshort{VE}/\acrshort{VCO2}; Mean = Mittelwert der Streuung, SD~=~Standardabweichung}
 	\label{pic:pic27}
 \end{figure}
 %
