--- a/header.tex
+++ b/header.tex
@@ -34,7 +34,7 @@
 \SetTracking{ encoding = *, shape = sc }{ 45 }
 
 
-\usepackage[inner=34mm, outer=30mm, bindingoffset=0mm]{geometry}
+\usepackage[left=30mm, right=30mm]{geometry}
 \usepackage[automark]{scrlayer-scrpage}
 \pagestyle{scrheadings}																		% lebendiger Seitentitel
 
