--- a/Methode.tex
+++ b/Methode.tex
@@ -172,3 +172,5 @@ Tab. \ref{tab:tabelle3} listet die Probanden-Daten Geschlecht, Gewicht in \si{\k
 	\end{tabulary}
 	\label{tab:tabelle3}
 \end{table}
+
+\cleardoubleemptypage
