--- a/Resultate.tex
+++ b/Resultate.tex
@@ -294,3 +294,5 @@ In Abb. \ref{pic:pic26} ist die Streuung der \gls{EQCO2}-Methode dargestellt. Di
 \end{figure}
 %
 Abb. \ref{pic:pic27} zeigt die Abweichungen der Ergebnisse für \gls{VE}/\gls{VCO2}. Hier differieren Rater und Software um durchschnittlich \SI{-4,07}{\per\minute} bei einer \gls{SD} von $\pm$10 \si{\per\minute}.
+
+\cleardoubleemptypage
