Rev. 3.2.4: Äußerliche Anpassungen für BCOR-Befehl.

--- a/Einfuehrung.tex
+++ b/Einfuehrung.tex
@@ -110,7 +110,7 @@ Das wichtigste grafische Instrument der Spiroergometrie ist die 9-Felder-Grafik 
 %
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth]{Bilder/9fieldcomplex.png}
+	\includegraphics[width=0.9\textwidth]{Bilder/9fieldcomplex.png}
 	\caption[Beispielhafte 9-Felder-Grafik nach einer Spiroergometrie]{Beispiel einer 9-Felder-Grafik nach einer Spiroergometrie mit einer jungen sportlichen Frau.\\
 	Für die sportmedizinische Spiroergometrie relevante Felder: Feld 4: \gls{VE} in \si{\litre\per\minute} gegenüber \gls{VCO2} in \si{\milli\litre\per\minute}, Feld 5: \gls{HF} in \si{\per\minute} und \gls{VCO2} in \si{\milli\litre\per\minute} gegenüber \gls{VO2} in \si{\milli\litre\per\minute}, Feld 6: \acrshort{EQO2} und \acrshort{EQCO2} gegenüber der Zeit in \si{\minute}; die VT1 wird mit einer vertikalen blauen Linie bzw. einer Raute und einem schwarzen Pfeil markiert. die VT2 wird mit einer roten vertikalen Linie angedeutet.~\cite{Kroidl.2015}}
 	\label{pic:pic2}
@@ -128,7 +128,7 @@ Anhand eines Pfeils und einer vertikalen blauen Linie mit einer kleinen Raute wu
 		\midrule
 		\midrule
 		\begin{titemize}
-			\item V-Slope-Methode: erster überproportionaler Anstieg der \gls{VCO2} gegenüber der \gls{VO2} (Feld~5)
+			\item V-Slope: erster überproportionaler Anstieg der \gls{VCO2} gegenüber der \gls{VO2} (Feld~5)
 			\item Anstieg des \myglsgen{EQO2} ohne gleichzeitigen Anstieg des \myglsgen{EQCO2} (Feld~6)
 		\end{titemize}
 		&\begin{titemize}
@@ -154,7 +154,7 @@ Anhand eines Pfeils und einer vertikalen blauen Linie mit einer kleinen Raute wu
 	\begin{subfigure}[t]{0.45\textwidth}
 		\centering
 		\includegraphics[width=50mm]{Bilder/eqo2.png}
-		\subcaption[Schematische Darstellung des \acrshort{EQO2}]{Schematische Darstellung des \gls{EQO2}; Das Verhältnis aus der \gls{VE} und der \gls{VO2} wird gegenüber der Zeit oder der Leistung \gls{WL} geplottet}
+		\subcaption[Schematische Darstellung des \acrshort{EQO2}]{Schematische Darstellung des \gls{EQO2}; Das Verhältnis der \gls{VE} zur \gls{VO2} gegenüber der Zeit oder Leistung \acrshort{WL}}
 		\label{subpic:pic6}
 	\end{subfigure}
 	\caption[Methoden zur grafischen Bestimmung der VT1]{Methoden zur grafischen Bestimmung der VT1; Die VT1 wird durch die erste vertikale Linie und den blauen Punkt markiert. Die zweite vertikale Linie deutet VT2 an~\cite{Kroidl.2015}}
@@ -179,7 +179,7 @@ Wie in Abb.~\ref{pic:pic5} durch die rechte gestrichelte Linie zu sehen, ist die
 	\begin{subfigure}[t]{0.45\textwidth}
 		\centering
 		\includegraphics[width=50mm]{Bilder/eqco2.png}
-		\subcaption[Schematische Darstellung des \acrshort{EQCO2}]{Schematische Darstellung des \acrshort{EQCO2}; Das Verhältnis aus der \acrshort{VE} und der \acrshort{VCO2} wird gegenüber der Zeit oder Leistung \gls{WL} geplottet}
+		\subcaption[Schematische Darstellung des \acrshort{EQCO2}]{Schematische Darstellung des \acrshort{EQCO2}; Das Verhältnis der \acrshort{VE} zur \acrshort{VCO2} gegenüber der Zeit oder Leistung \gls{WL}}
 		\label{subpic:pic7}
 	\end{subfigure}%
 	\hfil
