--- a/Methode.tex
+++ b/Methode.tex
@@ -107,7 +107,7 @@ Während der Belastungsphase wurden die Probanden stetig unterstützt, indem ihn
 	\label{pic:pic11}
 \end{figure}
 %
-Abb. \ref{pic:pic11} zeigt beispielhaft einen männlichen Probanden während einer Spiroergometrie. Zu erkennen sind das verwendete Fahrradergometer, das Atemmodul, der Filter, das Mundstück und die Nasenklammer. Grundsätzlich war es den Probanden freigestellt, ob sie das Mundstück mit der Hand halten oder mit dem Kiefer. Eventuelle Auswirkungen des Handlings auf die Durchführung oder Ergebnisse werden in dieser Arbeit nicht behandelt.\\
+Abb. \ref{pic:pic11} zeigt beispielhaft einen männlichen Probanden während einer Spiroergometrie. Zu erkennen sind das verwendete Fahrradergometer, das Atemmodul, der Filter, das Mundstück und die Nasenklammer. Grundsätzlich war es den Probanden freigestellt, ob sie das Mundstück mit der Hand halten oder mit dem Kiefer.\\ %Eventuelle Auswirkungen des Handlings auf die Durchführung oder Ergebnisse werden in dieser Arbeit nicht behandelt.\\
 In Abb. \ref{pic:pic12} ist die Oberfläche der \gls{CCPS} zu sehen, wie sie während einer Spiroergometrie auf dem Laptop dargestellt ist. Der Bildausschnitt zeigt die Graphen und Messwerte sowie den besagten Timer (oben in schwarzer Schrift) innerhalb eines Interfaces. Der obere rechte Plot zeigt die aktuell gemessene Durchflussrate des Flowsensors. Ist diese >0, handelt es sich um eine Exspiration, bei Werten <0 um eine Inspiration.
 %
 \begin{figure}[H]
