Rev.: 3.2.5: Einheiten an Formeln 2-1 bis 2-4 angefügt.

--- a/Methode.tex
+++ b/Methode.tex
@@ -33,18 +33,18 @@ Unmittelbar vor einem Test wurden die Probanden ein weiteres Mal über die Durch
 Wie die Bezeichnung "`Leistungsdiagnostik"' bereits suggeriert, ist es enorm wichtig, dass die gemessene Person bis an ihr individuelles Leistungsmaximum gelangt, damit beide Schwellen vollwertig identifiziert werden können. Aus diesem Grund wurde vor einem Test ein individuelles Belastungsprotokoll für den Probanden erstellt. Den ersten Schritt stellte die Berechnung der \myglsgen{Wmax} in \si{\watt} dar, mit dem ein mindestens zu erwartender Wert bestimmt werden konnte. In der \gls{SHIP} sowie Studien nach Jones wurden Formeln für die Berechnung der Soll-Leistung erarbeitet. Nach SHIP~\cite{Koch.2009}:
 %
 \begin{flalign}
-W_{max} (\male) &= -103,512 - 1,5766 * age + 2,2114 * \left\lbrace h\right\rbrace  \text{in \centi\metre} - 0,1198 * \left\lbrace m\right\rbrace \text{in \kilogram}
+W_{max} (\male) \text{ in \watt} &= -103,512 - 1,5766 * age + 2,2114 * \left\lbrace h\right\rbrace  \text{in \centi\metre} - 0,1198 * \left\lbrace m\right\rbrace \text{in \kilogram}
 \label{eq:formel9}\\[1em]
-W_{max} (\female) &= -80,628 - 0,7698 * age + 1,4038 * \left\lbrace h\right\rbrace \text{in \centi\metre} + 0,2873 * \left\lbrace m\right\rbrace \text{in \kilogram}
+W_{max} (\female) \text{ in \watt} &= -80,628 - 0,7698 * age + 1,4038 * \left\lbrace h\right\rbrace \text{in \centi\metre} + 0,2873 * \left\lbrace m\right\rbrace \text{in \kilogram}
 \label{eq:formel10}
 \end{flalign}
 %
 Nach Jones (inklusive tolerierter Streuung von $\pm$18 \%)~\cite{Kroidl.2015}:
 %
 \begin{flalign}
-W_{max} (\male) &= (2526 * \left\lbrace h\right\rbrace \text{in \metre} - 9,08 * age - 2759) * 0,163
+W_{max} (\male)\text{ in \watt} &= (2526 * \left\lbrace h\right\rbrace \text{in \metre} - 9,08 * age - 2759) * 0,163
 \label{eq:formel11}\\[1em]
-W_{max} (\female) &= (950 * \left\lbrace h\right\rbrace \text{in \metre} - 9,21 * age - 756) * 0,163
+W_{max} (\female) \text{ in \watt} &= (950 * \left\lbrace h\right\rbrace \text{in \metre} - 9,21 * age - 756) * 0,163
 \label{eq:formel12}
 \end{flalign}
 %
